# QBoincGui

./: CMakeLists.txt  COPYING  config.h.in  main.cpp
GuiBoinc/: CMakeLists.txt
InfoBoinc/: CMakeLists.txt  Session.cpp  Session.h  Socket.cpp  Socket.h  XMLAttributeMap.cpp  XMLAttributeMap.h  config.h.in  debug.cpp  debug.h
InfoBoinc/model/: ClientInfo.cpp  ClientInfo.h  FileTransferInfo.cpp  FileTransferInfo.h  HostInfo.cpp  HostInfo.h  ProjectInfo.cpp  ProjectInfo.h  ResultInfo.cpp  ResultInfo.h  WorkunitInfo.cpp  WorkunitInfo.h
doc/doxygen/: Doxyfile  compile.dox  groups.dox
doc/html/shared/: style.css
src/: CMakeLists.txt  ElidedTextLabel.cpp  ElidedTextLabel.h  Engine.cpp  Engine.h  GuiIcon.cpp  GuiIcon.h  PresentationSingleton.cpp  PresentationSingleton.h  main.cpp  resources.qrc  ui_Master.cpp  ui_Master.h
src/ui_Advanced/: AddClientWizard.cpp  AddClientWizard.h  BoincPlugin.h  BoincTree.cpp  BoincTree.h  BoincTreeItems.cpp  BoincTreeItems.h  CoreBoincPlugin.cpp  CoreBoincPlugin.h  InfoWidget.cpp  InfoWidget.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  ProgressItemDelegate.cpp  ProgressItemDelegate.h  ui_Advanced.cpp  ui_Advanced.h
src/ui_Advanced/InfoWidgets/: ProjectInfoWidget.cpp  ProjectInfoWidget.h  ProjectInfoWidget.ui  SessionInfoWidget.cpp  SessionInfoWidget.h  SessionInfoWidget.ui  SystemInfoWidget.cpp  SystemInfoWidget.h  SystemInfoWidget.ui  TransfersInfoWidget.cpp  TransfersInfoWidget.h  TransfersInfoWidget.ui
